2024-12-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (bzl): Normalize branch condition to prevent
	loss of information due to casting to `jitter_uint' on 32-bit systems.
	(bzlu): Likewise.
	(bnzl): Likewise.
	(bnzlu): Likewise.

2024-12-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.h (pkl_asm_while_loop): Accept new parameter: AST
	type node for the loop condition.
	* libpoke/pkl-asm.c (pkl_asm_while_loop): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Pass type of condition to
	`pkl_asm_while_loop' invocation.
	* libpoke/pkl-promo.c (pkl_promo_ps_if_stmt): Removed. That cast is
	wrong due to possible truncation of wider integers.
	* libpoke/ras (.loop): Update `pkl_asm_while_loop' invocation.
	* testsuite/poke.pkl/while-4.pk: New test.
	* testsuite/poke.pkl/while-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2024-12-29  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.h (pvm_make_integral): New function declaration.
	* libpoke/pvm-val.c (pvm_make_integral): New function moved from
	`libpoke/pvm-val.c'.
	* libpoke/pkl-asm.c (pvm_make_integral): Removed.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_binary): Do not cast to `int<32>'
	for the following operators: `&&', `||' and `=>' to prevent loss of
	information due to possible truncation.
	(pkl_promo_ps_op_unary): Likewise for `!' unary operator.
	* libpoke/pkl-gen.c (pkl_gen_pr_op_and): Change codegen to work correctly
	with operands wider than `int<32>'.
	(pkl_gen_pr_op_or): Likewise.
	(pkl_gen_pr_op_impl): Likewise.
	(pkl_gen_pr_op_not): Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.pkl/and-16.pk: New test.
	* testsuite/poke.pkl/and-17.pk: Likewise.
	* testsuite/poke.pkl/and-18.pk: Likewise.
	* testsuite/poke.pkl/and-int-struct-4.pk: Likewise.
	* testsuite/poke.pkl/impl-6.pk: Likewise.
	* testsuite/poke.pkl/or-6.pk: Likewise.
	* testsuite/poke.pkl/or-7.pk: Likewise.